<resources>
    <string name="app_name">1712390_1712518</string>
    <string name="map_api_key">AIzaSyDspXApagMNvHUfjoFkIbjy_en-iHb-RP8</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOG OUT</string>
    <string name="pick_start_date">Pick a starting date</string>
    <string name="pick_end_date">Pick an ending date</string>
    <string name="pick_arrival_date">Pick arrival date</string>
    <string name="picK_leave_date">Pick leaving date</string>
    <string name="pick_source">Pick source point</string>
    <string name="pick_destination">Pick destination</string>
    <string name="adult">Adults: </string>
    <string name="children">Children: </string>
    <string name="min_cost">MinCost: </string>
    <string name="max_cost">MaxCost: </string>
    <string name="rating">Ratings: </string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="_continue">Continue</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="Name">Name</string>
    <string name="id">ID: </string>
    <string name="private_tour">Private tour</string>
    <string name="remember_me">Remember me?</string>
    <string name="create_tour">Create a tour</string>
    <string name="profile">User profile</string>
    <string name="num_example">1</string>
    <string name="amount">amount</string>
    <string name="avatar">Avatar image link</string>
    <string name="cost">Cost: </string>
    <string name="included">included</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="review">Review</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth: </string>
    <string name="yyyy">yyyy</string>
    <string name="MM">MM</string>
    <string name="dd">dd</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">SIGN UP</string>
    <string name="search">Search</string>
    <string name="location">Enter location</string>
    <string name="create_new_stop_point">Create a new stop point</string>
    <string name="restaurant">Restaurant</string>
    <string name="hotel">Hotel</string>
    <string name="rest_station">Rest Station</string>
    <string name="other">Other</string>
    <string name="service_type">Service Type: </string>
    <string name="view_stop_point">View All Services</string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="member_list">Tour members</string>
    <string name="invite">Invite</string>
    <string name="edit_tour">Edit Tour</string>
    <string name="delete_tour">Delete Tour</string>
    <string name="comment">Comment</string>
    <string name="view_tour">View on map</string>
    <string name="edit_service">Edit stop point</string>
    <string name="public_tour">Public tour</string>
    <string name="clone_tour">Clone Tour</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="back">Back</string>
    <string name="show_review">Show all reviews</string>
    <string name="show_comment">Show all comments</string>
    <string name="start_tour">Start tour</string>
    <string name="finish_tour">Finish tour</string>
    <string name="host">TOUR HOST</string>
    <string name="member">MEMBER</string>
    <string name="invited">Invited</string>
    <string name="view_invites">View tour Invites</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="history">User History Tours</string>
    <string name="front_page">Back to front page</string>
    <string name="view">View</string>
    <string name="view_users">View all users</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="pick_image">Pick Image</string>
</resources>
