<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStopPointActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:background="#0f2557">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="#fcc133"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="#f00"
                android:text="@string/create_new_stop_point"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:inputType="text"
                android:id="@+id/stoppoint_edit_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/stoppoint_edit_address"
                android:inputType="textPostalAddress"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <EditText
                    android:id="@+id/stoppoint_edit_StartDate"
                    android:inputType="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pick_arrival_date"
                    android:layout_weight="4"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/stoppoint_edit_EndDate"
                    android:inputType="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/picK_leave_date"
                    android:layout_weight="4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_cost"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/stoppoint_edit_MinCost"
                    android:text="@string/num_example"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:hint="@string/amount"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_cost"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/stoppoint_edit_MaxCost"
                    android:text="@string/num_example"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:hint="@string/amount"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_type"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stoppoint_edit_serviceType"
                android:orientation="vertical"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stoppoint_edit_type1"
                    android:text="@string/restaurant"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stoppoint_edit_type2"
                    android:text="@string/hotel"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stoppoint_edit_type3"
                    android:text="@string/rest_station"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stoppoint_edit_type4"
                    android:text="@string/other"/>
            </RadioGroup>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:id="@+id/stoppoint_edit_submitBtn"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>