<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTourActivity"
    android:background="#0f2557">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:background="#fcc133">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="#f00"
                android:text="@string/create_tour"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/CreateTour_Name"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/Name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <EditText
                    android:id="@+id/CreateTour_StartDate"
                    android:inputType="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/pick_start_date"
                    android:layout_weight="4"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/CreateTour_EndDate"
                    android:inputType="none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:hint="@string/pick_end_date"
                    android:layout_weight="4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/pick_source"
                    android:id="@+id/CreateTour_StartPoint"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/CreateTour_StartPointDetail"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:text="@string/pick_destination"
                    android:id="@+id/CreateTour_EndPoint"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/CreateTour_EndPointDetail"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adult"
                    android:textSize="18sp"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/CreateTour_Adult"
                    android:text="@string/num_example"
                    android:hint="@string/amount"
                    android:gravity="end"
                    android:textAlignment="textEnd"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/children"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/CreateTour_Children"
                    android:text="@string/num_example"
                    android:hint="@string/amount"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_cost"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/CreateTour_MinCost"
                    android:text="@string/num_example"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:hint="Min Cost"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_cost"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:id="@+id/CreateTour_MaxCost"
                    android:text="@string/num_example"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:hint="Max Cost"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/CreateTour_Avatar"
                android:hint="@string/avatar"
                android:inputType="text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_tour"
                    android:id="@+id/CreateTour_isPrivate"
                    android:layout_marginRight="20dp"
                    android:checked="false"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/CreateTour_ContinueBtn"
                android:text="@string/_continue"/>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>